--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index.html</title>
-    <style>
-        p{
-            color: red;
-        }
-    </style>
 </head>
 <body>
-    <div class="content">
-        <h1>test</h1>
-        <p>test_2</p>
-    </div>
+    <h1>인덱스 페이지 만들기</h1>
+    <p>p1</p>
 </body>
 </html>
