--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <h1>인덱스 페이지 만들기</h1>
     <p>p1</p>
     <img id="kimImg" src="./images/kim1.png">
+    <a href="./game.html">게임하러 가기</a>
 </body>
 </html>
